--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a former Winemaker turned Software developer, here to make some tasty code!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>McLean, Virginia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Food, Wine, and D&D. I'm basically a Hobbit.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>At the moment it's to work with a crack team pushing my knowledge of my new field</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy problem solving and puzzles. I feel that I will be quite proficient at this and also the money's not bad either ;)</p>
     </section>
 
     <footer id="footer">
